testdata/baselines/reference/compiler/moduleExportsInFunctionParamWithRequire.errors.txt
/dep.js(3,16): error TS7006: Parameter 'module' implicitly has an 'any' type.
/dep.js(7,20): error TS2591: Cannot find name 'fs'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.


==== /main.ts (0 errors) ====
    import dep = require("./dep.js");
    
    export const g = dep.greeting;
    
==== /dep.js (2 errors) ====
    exports.greeting = "hello";
    
    function setup(module) {
                   ~~~~~~
!!! error TS7006: Parameter 'module' implicitly has an 'any' type.
        module.exports = { configured: true };
    }
    
    const fs = require("fs");
                       ~~~~
!!! error TS2591: Cannot find name 'fs'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node` and then add 'node' to the types field in your tsconfig.
    